# badminton-video-analysis

./: .gitignore  ARCHITECTURE.md  Badminton_Analysis_App_PRD_v1.0.md  CLAUDE.md  DEPLOYMENT_LOG.md  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/agents/: data-scientist.agent.md  senior-deployment.agent.md  senior-engineer.agent.md  senior-pm.agent.md  senior-qa.agent.md
data/: .gitkeep
data/shuttle_cache/: Badminton_video_example_2_ball.csv  Badminton_video_example_ball.csv
docs/: PRD_v2.0.md  PRD_v2.2.md  PRD_v2.3.md  PRD_v2.4.md  PRD_v2.6.md  RESULTS.md
docs/reports/: both_videos_frame_review.html  court_zone_homography_example_video1.html  court_zone_homography_vs_proportional.html  ground_truth_per_shot_comparison.html  phase_g5_before_after_review.html  phase_g_deploy_review.html
docs/results/csv/: Badminton_video_example_2_analysis.csv  Badminton_video_example_analysis.csv
ground_truth_template/: Badminton_video_example_ground_truth.csv
src/: config.py  main.py
src/api/: analytics.py  export.py  rallies.py  sessions.py  shots.py
src/pipeline/: court_calibration.py  court_detector.py  debug_overlay.py  export.py  frame_filter.py  frame_sampler.py  player_detector.py  player_tracker.py  rally_segmenter.py  score_tracker.py  scoreboard_ocr.py  shot_detector.py  shuttle_tracker.py  validator.py  zone_grid.py  zone_mapper.py
src/utils/: shot_types.py
tests/: test_court_calibration.py  test_court_detector.py  test_debug_overlay.py  test_frame_sampler.py  test_player_detector_racket.py  test_zone_grid.py
(+1 files in other folders)
